# desktop-notifier

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: codeql-analysis.yml  lint.yml  publish.yml  test.yml
docs/: conf.py  index.rst  requirements.txt
docs/background/: eventloops.rst  platform_support.rst
examples/: eventloop.py  eventloop_handlers.py  synchronous.py
src/desktop_notifier/: __init__.py  base.py  common.py  dbus.py  dummy.py  implementation_base.py  macos.py  macos_legacy.py  macos_support.py  main.py  sync.py  winrt.py
src/desktop_notifier/backends/: base.py  dbus.py  dummy.py  macos.py  macos_support.py  winrt.py
src/desktop_notifier/util/: logger.py  pkg_metadata_helper.py
tests/: __init__.py  conftest.py  test_api.py  test_callbacks.py  test_macos.py  test_notification.py  test_sync_api.py
tests/backends/: __init__.py  dbus.py  macos.py  winrt.py
