[metadata]
name = desktop-notifier
version = 3.4.0
author = Sam Schott
author_email = sam.schott@outlook.com
license = MIT
description = Python library for cross-platform desktop notifications
keywords = desktop-notifier
url = https://github.com/samschott/desktop-notifier
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir =
    = src
zip_safe = False
setup_requires = build
install_requires =
    dbus-next;sys_platform=='linux'
    importlib_resources;python_version<'3.9'
    packaging
    rubicon-objc;sys_platform=='darwin'
    winsdk;sys_platform=='win32'
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    bump2version
    flake8
    mypy
    pre-commit
    pytest
    pytest-cov
docs =
    sphinx
    m2r2
    sphinx-autoapi
    sphinx_rtd_theme

[options.package_data]
desktop_notifier =
    resources/*
    py.typed

[flake8]
ignore = E203,E501,W503,H306
per-file-ignores =
	__init__.py: F401
statistics = True

[mypy]
ignore_missing_imports = True
files = src
